# notify_service_timebeing

./: .env.example  .gitignore  Dockerfile  compose.yaml  email_sender.py  main.py  pyproject.toml
.github/workflows/: docker-build.yml
migrations/: env.py
migrations/versions/: 87867572b706_initial.py
notify_service/: consumer.py  database.py  email_sender.py  main.py  models.py  settings.py  ws_manager.py
