[project]
name = "notify-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Queiroz",email = "marcosamfq123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "pika (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
